# peace-protocol

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md
.github/workflows/: ci.yml
app/: .coverage  .env  .gitignore  README.md  config.json  config.mainnet.json  config.preprod.json  coverage.txt  create_wallets.sh  feasibility.md  lint.sh  peace.cddl  requirements.txt  run_tests.sh  setup.sh
app/circuit/: vk.json
app/commands/: .gitignore  00_createScriptReferences.sh  01_createGenesisTx.sh  01a_createGenesisTx.sh  01b_registerGrothTx.sh  02a_updateReferenceTx.sh  02b_removeReferenceTx.sh  03_createEncryptionTx.sh  04_removeEncryptionTx.sh  04a_removeEncryptionTx.sh  04b_cancelEncryptionTx.sh  05_createBidTx.sh  06_removeBidTx.sh  07_createReEncryptionTx.sh  07a_createSnarkTx.sh  07b_createReEncryptionTx.sh  08_decryptMessage.sh  89_registerGroth.sh  99_displayAllBalances.sh  README.md  display_all_balances.sh
app/contracts/: .gitignore  README.md  aiken.toml  claude-audit.md  compile.sh  config.json  groth-optimization.md
app/data/: bidding.token  binding.json  capsule.json  encryption.token  full-level.json  half-level.json  r5.point  register.json  schnorr.json  secret.hash  witness.point
app/gui/: .gitignore  CHANGELOG.md  CLAUDE.md  build.sh  goals.md  lint.sh  package-lock.json  package.json  run.sh  test.sh
app/gui/src-tauri/: Cargo.toml  tauri.conf.json
app/gui/src-tauri/capabilities/: default.json
app/gui/src-tauri/resources/: config.json
app/gui/src-tauri/resources/cardano/preprod/: config.json
app/gui/src-tauri/src/: config.rs  lib.rs  main.rs
app/gui/src-tauri/src/commands/: config.rs  iagon.rs  media.rs  mod.rs  node.rs  secrets.rs  snark.rs  wallet.rs
app/gui/src-tauri/src/crypto/: mod.rs  secrets.rs  wallet.rs
app/gui/src-tauri/src/process/: cardano.rs  express.rs  kupo.rs  manager.rs  mithril.rs  mod.rs  ogmios.rs
app/node/: .gitignore  README.md  (+2 more)
data/: register.json
documentation/: .gitignore  README.md  architecture.md  build_close_out.sh  build_report.sh  close_out_report.md  elevator_pitch.md  methodology.md  promt.json  refs.bib  technical_report.md
(+321 files in other folders)
