[package]
name = "veiled-desktop"
version = "0.1.0"
description = "Veiled Desktop - Peace Protocol Encrypted Data Marketplace"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "veiled_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
custom-protocol = ["tauri/custom-protocol"]
